update style product detail and thanks

--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -7,7 +7,7 @@
 /* color variables */
 primary = #03A9F4
 info = #00bcd4
-success = #85ce88
+success = #00a650
 danger = #ff4b4b
 warning = #ff9039
 default = #ddd
