--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -255,9 +255,10 @@
   .list-icons-add
     .nav-link
       color white
+      padding 5px 0
       p
         margin 0
-        fon-size 18px
+        font-size 18px
 
 
 /*----- Titles ------*/
