--- a/app/templates/shop/thanks.html
+++ b/app/templates/shop/thanks.html
@@ -1,12 +1,14 @@
-<section id="content-area" class="content-blog">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="thanks">
-                    <h1>{{Thanks.title}}</h1>
-                    <p>Si tienes alguna información adicional que quieras darnos contáctanos en chat de ayuda o en <br> <a
-                            href="mailto:{{initConfig.email}}"> <i class="fa fa-envelope"></i> {{initConfig.email}}</a> | <a
-                            href="tel:{{initConfig.phone}}"> <i class="fa fa-phone"></i> {{initConfig.phone}} </a> </p>
+<section class="temp-thanks">
+    <div class="content-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="thanks">
+                    <img style="width: 250px;" src="{{initConfig.logo}}" alt="">
+                        <p>Si tienes alguna información adicional que quieras darnos contáctanos en las siguientes opciones<br> <a
+                                href="mailto:{{initConfig.email}}"> <i class="fa fa-envelope"></i> {{initConfig.email}}</a> | <a
+                                href="tel:{{initConfig.phone}}"> <i class="fa fa-phone"></i> {{initConfig.phone}} </a> </p>
+                    </div>
                 </div>
             </div>
         </div>
