--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -154,26 +154,64 @@ md-input-container
 
 /* ------ TEMP PRODUCT DETAIL STYLE ----- */
 .temp-product-detail, .md-dialog-content
+  background-color #f6f6f6
+  #product-detail 
+    background-color white
+    .wrapper 
+      padding 30px 0
+    .wip-image-zoom .main-image
+      height 400px
+      width auto
+      margin 0 auto
+    .article-description  
+      padding 40px 0
+      border-left 1px solid #ddd
+      height 100%
+      md-select
+        border 1px solid #ddd
+      md-input-container.md-input-focused .md-input,
+      md-input-container .md-input.ng-invalid.ng-dirty, 
+      md-input-container.md-input-resized .md-input
+        border 1px solid #ddd  
+      .type-payments
+        small 
+          color success
+          font-size 14px
+        a.nav-link.disabled 
+          padding-right 5px
+          padding-left 0
+
+  .title-prd
+    font-size 22px
+    text-transform uppercase
+    padding 10px 0
+  .article-price 
+    font-weight normal
+  md-input-container .md-input
+    background-color white
+    border 1px solid #ddd
+    color fontClr
   .md-select-value      
     padding 2px 8px 1px !important
+    background-color white
     md-input-container > md-select
       border 1px solid #ddd
+      color fontClr
     md-input-container .md-input
       border 1px solid #ddd
       padding 0 10px  
     md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused .md-input, md-input-container:not(.md-input-invalid).md-input-focused .md-input, md-input-container.md-default-theme:not(.md-input-invalid).md-input-resized .md-input, md-input-container:not(.md-input-invalid).md-input-resized .md-input
-      border 1px solid black  
+      border 1px solid #ddd  
   .bg-image-single
     background-size cover
-    background-position center
+    background-position bottom
     height 600px
   .box-description-detail-product
-    padding 60px 0
+    padding 20px 0
+    border-top 1px solid #ddd
     h4
-      text-transform uppercase    
-  .article-description
-    md-input-container
-      width 50%
+      text-transform uppercase  
+      padding-bottom: 20px;  
     .article-price
       padding 5px
       color fontClr
@@ -433,3 +471,8 @@ footer
   padding 15px
   background-color #f5f5f5
   border 1px solid #ddd
+
+.temp-thanks   
+  padding 90px 0
+  p   
+    font-size 18px
