--- a/app/templates/partials/options-group.html
+++ b/app/templates/partials/options-group.html
@@ -1,15 +1,30 @@
-<div class="col-sm-6" ng-repeat="option in Product.detail.metadata.groups | orderBy: 'level'">
-    <md-input-container style="width: 100%"> 
-        <label ng-if="option.kind === 'size'">Talla</label>
-        <label ng-if="option.kind === 'color'">Color</label>
-        <label ng-if="option.kind === 'style'">Estilo</label>
-        <md-select ng-model="Product.optionSelected[$index]" required name="size" ng-change="Product.getProductFromGroup()">
-            <md-option ng-repeat="size in Product.detail.taxonomies | filter:option.kind" ng-value="size">
-                {{size.name}}
-            </md-option>
-        </md-select>
-        <div class="errors" ng-messages="FormQty.size.$error">
-            <div ng-message="required">Requerido</div>
-        </div>
-    </md-input-container>
+<div class="">
+    <div class="col-sm-8 no-padding" ng-repeat="option in Product.detail.metadata.groups | orderBy: 'level'">
+        <md-input-container md-no-float style="width: 100%"> 
+            <label ng-if="option.kind === 'size'">Talla</label>
+            <label ng-if="option.kind === 'color'">Color</label>
+            <label ng-if="option.kind === 'style'">Estilo</label>
+            <md-select ng-model="Product.optionSelected[$index]" required name="size" ng-change="Product.getProductFromGroup()">
+                <md-option ng-repeat="size in Product.detail.taxonomies | filter:option.kind" ng-value="size">
+                    {{size.name}}
+                </md-option>
+            </md-select>
+            <div class="errors" ng-messages="FormQty.size.$error">
+                <div ng-message="required">Requerido</div>
+            </div>
+        </md-input-container>
+    </div>
+    <div class="col-md-8 no-padding">
+        <md-input-container md-no-float class="md-block">
+            <label>Cantidad</label>
+            <input type="number" placeholder="0" ng-model="Product.detail.qty" min="1"
+                    ng-pattern="/^-?[0-9][^\.]*$/" name="qty" 
+                    compare-greater="Product.detail.inventory" required/>
+            <div class="errors" ng-messages="FormQty.qty.$error">
+                <div ng-message="required">Requiredo</div>
+                <div ng-message="pattern">Cantidad no valida</div>
+                <div ng-message="compareGreater">Cantidad de producto no disponible</div>
+            </div>
+        </md-input-container>
+    </div>
 </div>
