show more items on home and validate showWeb

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -114,7 +114,7 @@ md-input-container
 
   /* SECTION TWO */
   .section-two
-    padding 60px 0 !important
+    padding 60px 0 20px !important
 
 
   // silence is gold ..
@@ -136,6 +136,7 @@ md-input-container
 
   /* SECTION FOUR */
   .section-four
+    padding: 20px 0 40px !important
     .list-group
       margin-bottom 15px
 
