--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -112,16 +112,16 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <button class="btn btn-black btn-block" ng-click="ShopCart.processPurchase()"
+<!--                             <button class="btn btn-black btn-block" ng-click="ShopCart.processPurchase()"
                                     ng-if="ShopCart.total >= ShopCart.minimumPurchase"><i
                                     class="fa fa-credit-card"></i> Procesar compra
-                            </button>
+                            </button> -->
                             <div ng-controller="AccessCtrl as Access" style="margin-top: 5%">
-                                <div ng-if="!Access.isAuthenticated()">
+                                <div>
                                     <p class="text-center" style="margin-top: 3%">Ó</p>
 
                                     <button class="btn btn-black btn-block" ng-click="ShopCart.goToPurchaseGuest()"><i
-                                            class="fa fa-credit-card"></i>Comprar como invitado
+                                            class="fa fa-credit-card"></i>Procesar compra
                                     </button>
                                 </div>
                             </div>
