--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -112,12 +112,15 @@
                                     </tbody>
                                 </table>
                             </div>
-<!--                             <button class="btn btn-black btn-block" ng-click="ShopCart.processPurchase()"
-                                    ng-if="ShopCart.total >= ShopCart.minimumPurchase"><i
-                                    class="fa fa-credit-card"></i> Procesar compra
-                            </button> -->
-                            <div ng-controller="AccessCtrl as Access" style="margin-top: 5%">
-                                <div>
+
+                            <div ng-controller="AccessCtrl as Access" style="margin-top: 5%" >
+                                <div ng-if="Access.isAuthenticated()">
+                                    <button class="btn btn-black btn-block" ng-click="ShopCart.processPurchase()"
+                                        ng-if="ShopCart.total >= ShopCart.minimumPurchase"><i
+                                        class="fa fa-credit-card"></i> Procesar compra
+                                    </button>
+                                </div>
+                                <div ng-if="!Access.isAuthenticated()">
                                     <p class="text-center" style="margin-top: 3%">Ó</p>
 
                                     <button class="btn btn-black btn-block" ng-click="ShopCart.goToPurchaseGuest()"><i
