--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -34,10 +34,20 @@
                                     <button ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
                                         price: Product.detail.price, image: Product.detail.featuredImage.url,
                                         qty: Product.detail.qty, taxonomies : Product.detail.taxonomies,
+                                        shipmentPrice: Product.detail.shipmentPrice, typeTax: Product.detail.typeTax,
+                                         stock: Product.detail.inventory, offerPrice: Product.detail.offerPrice,
+                                           priceList: Product.detail.priceList, prices: Product.detail.prices}, Product.detail.qty, true)"
+                                                    ng-disabled="Shop.itemInCart(Product.detail.id) || FormQty.$invalid || Product.detail.kind ==='group' || Product.detail.inventory <= 0"
+                                                    class="btn btn-optional"><i class="fa fa-shopping-cart"></i> Comprar ahora
+                                    </button>
+
+                                    <button ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
+                                        price: Product.detail.price, image: Product.detail.featuredImage.url,
+                                        qty: Product.detail.qty, taxonomies : Product.detail.taxonomies,
                                          shipmentPrice: Product.detail.shipmentPrice, typeTax: Product.detail.typeTax,
                                           stock: Product.detail.inventory, offerPrice: Product.detail.offerPrice,
                                            priceList: Product.detail.priceList, prices: Product.detail.prices},
-                                           Product.detail.qty)"
+                                           Product.detail.qty, false)"
                                             ng-disabled="Shop.itemInCart(Product.detail.id)|| FormQty.$invalid || Product.detail.inventory <= 0"
                                             class="btn btn-optional col-sm-8"> <i class="fa fa-shopping-bag"></i> Agregar a carrito
                                     </button>
